# instagram-diff

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
tests/: test_detect_changes.py
tracker/: download_pics.py  run_tracker.py
userscript/: README.md  main.js  scraper.user.js
